# cookbook

./: .env.example  .gitignore  LICENSE  Pipfile  README.md  Readme.md  index.py  main.py  package-lock.json  package.json  tailwind.config.ts  utils.py
.github/: pull_request_template.md
Cybersecurity-Awareness/: cyber.py  mongoup.py  readme.md
NewsSummarizer/: README.md  app.py
Shivam/: Readme.md  generator.py  joker.py  test.py
app/: globals.css  layout.tsx  (+1 more)
video-to-notes-generator/: README.md  output.md  pyproject.toml  requirements.txt
video-to-notes-generator/core/notes_generator/: add_timestamp.py  create_notes.py
video-to-notes-generator/core/post_processing/: fill_slides.py  timestamp.py
video-to-notes-generator/tools/audio/audio_extractor/: extractor.py  whisper_extractor.py
video-to-notes-generator/tools/audio/audio_extractor/samples/: desktop.ini
video-to-notes-generator/tools/image/: tune_img.py
video-to-notes-generator/tools/llm/: gemini.py  test_gemini.py  tune.py
video-to-notes-generator/tools/text/generator/: notes_generator.py
video-to-notes-generator/tools/text/matching/: fuzzy.py
video-to-notes-generator/tools/text/slide_processor/: note_slide_mapper.py  slide_inserter.py
video-to-notes-generator/tools/text/slide_processor/extractors/: img_handler.py  pdf_handler.py
video-to-notes-generator/tools/text/slide_processor/utils/: ocr.py
video-to-notes-generator/tools/text/text_formatter/: computer_science_text_formatter.py  markdown_formatter.py  text_cleaner.py  text_formatter.py
video-to-notes-generator/tools/video/: downloader.py
(+196 files in other folders)
